[refactor] Use correct UTF-8 definition